--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2984,6 +2984,14 @@ input, select, textarea {
 
 /* Footer */
 
+#contact {
+	background: #4acaa8;
+	border-top: 0;
+	color: #c0c0c0;
+	overflow: hidden;
+	padding: 4em 0 2em 0;
+}
+
 	#footer {
 		background: #fafafa;
 		border-top: 0;
